tests/error/type_errors/unitary_function_call_wrong.err
Error: Type mismatch (at $FILE:14:8)
   | 
12 | @guppy
13 | def main() -> None:
14 |     foo(True)
   |         ^^^^ Expected argument of type `int`, got `bool`

Guppy compilation failed due to 1 previous error
